--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My Personal Website
+title: alex de chazal
 email: adechazal00@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my blog about financial services, sustainability, and adventure. You can edit this
