--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,14 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/my-website" # the subpath of your site, e.g. /blog
 url: "https://adechazal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  adechazal
+
+social_links:
+  - name: GitHub
+    url: https://github.com/adechazal
+  - name: LinkedIn
+    url: https://linkedin.com/in/alex-de-chazal
+
 
 # Build settings
 theme: minima
