--- a/_config.yml
+++ b/_config.yml
@@ -26,14 +26,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/my-website" # the subpath of your site, e.g. /blog
 url: "https://adechazal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
 github_username:  adechazal
-
-social_links:
-  - name: GitHub
-    url: https://github.com/adechazal
-  - name: LinkedIn
-    url: https://linkedin.com/in/alex-de-chazal
+linkedin_username: alex-de-chazal
+instagram_username: chazal1
+strava_username:  40143916
 
 
 # Build settings
