--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ url: "https://adechazal.github.io" # the base hostname & protocol for your site,
 github_username:  adechazal
 linkedin_username: alex-de-chazal
 instagram_username: chazal1
+calcom_username: alex-de-chazal
 
 
 # Build settings
