--- a/_config.yml
+++ b/_config.yml
@@ -21,15 +21,12 @@
 title: alex de chazal
 email: adechazal00@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my blog about financial services, sustainability, and adventure. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my blog about financial services, sustainability, and adventure travel.
 baseurl: "/my-website" # the subpath of your site, e.g. /blog
 url: "https://adechazal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  adechazal
 linkedin_username: alex-de-chazal
 instagram_username: chazal1
-calcom_username: alex-de-chazal
 
 
 # Build settings
