Include minima theme's CSS file

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "https://adechazal.github.io" # URL for production
 github_username:  adechazal
 linkedin_username: alex-de-chazal
 instagram_username: chazal1
-
+calcom_link: "https://cal.com/alex-de-chazal/15min"
 
 # Build settings
 theme: minima
