--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,9 @@ plugins:
 # Permalink settings
 permalink: /:categories/:year/:month/:day/:title.html
 
+# Enable excerpts on the home page
+show_excerpts: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
